--- a/Atividade02/q2/index.html
+++ b/Atividade02/q2/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questao 2</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lista de Perfis</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="container">
-
-        <div class="conteudo-esquerdo">
-            <h1>LEFT</h1>
+  <div class="perfil__lista">
+    <div class="perfil">
+      <img src="gata-akarui.jpg" alt="Gata Akarui">
+      <div class="perfil__info">
+        <h3>Gata Akarui</h3>
+        <p>1.2 bi Magia Rn Dk</p>
+      </div>
+    </div>
+    <div class="perfil">
+        <img src="pedruHas.jpg" alt="PedruHAS">
+        <div class="perfil__info">
+          <h3>PedruHAS</h3>
+          <p>1 mi Vante Vi DS</p>
         </div>
-        <div class="conteudo-principal">
-            <h1>MAIN</h1>
+      </div>
+      <div class="perfil">
+        <img src="pedra.png" alt="Pedra">
+        <div class="perfil__info">
+          <h3>Pedra</h3>
+          <p>2 Rocha Rc St</p>
         </div>
-        <div class="conteudo-direito">
-            <h1>RIGHT</h1>
+      </div>
+      <div class="perfil">
+        <img src="Martim.jpg" alt="Martim Rockista">
+        <div class="perfil__info">
+          <h3>Martim Rockista</h3>
+          <p>666 mi nataS Al Hl</p>
         </div>
-
-    </section>
+      </div>
+   
+  </div>
 </body>
 </html>
